# agents_architecture

./: .gitignore  README.md  architecture.md  docker-compose.debug.yml  docker-compose.postgres.yml
.cursor/: mcp.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_request_state_contracts.py  0003_quality_and_review.py  0004_transcript_and_review_resolution.py  0005_outbox_events.py
backend/app/: limiter.py  main.py
backend/app/api/: deps.py  errors.py
backend/app/api/routes/: chat.py  reviews.py  runs.py
backend/app/core/: config.py  schemas.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  message.py  outbox_event.py  quality.py  run.py  session_state.py  tool_call.py  transcript.py  user.py
backend/app/observability/: metrics.py  tracing.py
backend/app/prompts/: environment.py
backend/app/prompts/templates/: chat.j2
backend/app/services/: chat_enqueue.py  retry.py  runtime_policy.py  tool_gateway.py
backend/app/services/agent/: orchestrator.py
backend/app/services/llm/: base.py  mock_client.py  openai_client.py
backend/app/services/repositories/: __init__.py  outbox.py  runs.py  state.py
backend/app/tools/: base.py  retrieval_bm25.py  search_documents.py
backend/app/worker/: __init__.py  __main__.py  main.py
backend/observability/prometheus/rules/: latency_slo.yml  reliability.yml
backend/scripts/: e2e_doc_guard.py  e2e_outbox_curl.sh
backend/tests/: conftest.py  e2e_helpers.py  test_api_key.py  test_dependency_overrides.py  test_e2e.py  test_e2e_outbox.py  test_errors.py  test_health.py  test_health_bdd.py  test_outbox_async.py  test_parametrize_health.py  test_pydantic_discriminated_union.py  test_python_protocol_example.py
backend/tests/features/: health.feature
docs/: outbox.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
frontend/src/__tests__/: metrics.test.ts
frontend/src/api/: client.ts  metrics.ts  sse.ts  types.ts
frontend/src/components/: ChatDebugPanel.tsx  OutboxMetricsPanel.tsx  PathMetricsPanel.tsx  RawMetricsPanel.tsx  RunInspectorPanel.tsx
mcp/scripts/: run-docker-mcp.sh
